2010-05-29 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a modified patch to t/io_multihomed6.t to correct the test
	on Fedora 10 and others:
		- https://rt.cpan.org/Public/Bug/Display.html?id=57676
	* New Release IO-Socket-INET6-2.63

2010-05-20 Shlomi Fish <shlomif@iglu.org.il>
	* Solved "problems with multihomed and family order"
		- https://rt.cpan.org/Ticket/Display.html?id=57676
		- Thanks to Steffen Ullrich
	* New Release IO-Socket-INET6-2.62

2010-03-25 Shlomi Fish <shlomif@iglu.org.il>
	* Fix the inet_pton / inet_ntop import warnings:
		- https://rt.cpan.org/Ticket/Display.html?id=55901
		- Thanks to Todd Rinaldo for the patch.
	* Fix listening on :: or 0.0.0.0 - a random address instead of
		the specified would be used. Added test listen_port_only.t
		- Regression from 2.57:
		- https://rt.cpan.org/Ticket/Display.html?id=54656
		- Thanks to Steffen Ullrich for the patch.
	* New Release IO-Socket-INET6-2.60
	* Fixes to t/listen_port_only.t.
	* New Release IO-Socket-INET6-2.61

2010-03-19 Shlomi Fish <shlomif@iglu.org.il>
	* Syntax change to adapt for older Perls:
		- https://rt.cpan.org/Ticket/Display.html?id=54656
		- Thanks to paul.
	* New Release IO-Socket-INET6-2.59

2010-03-18 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a patch by Steffen Ullrich, fixing:
	https://rt.cpan.org/Ticket/Display.html?id=54656
	* New Release IO-Socket-INET6-2.58

2009-11-23 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a modified version of a patch by Matthew Horsfall 
	<wolfsage@gmail.com> in order to add t/blocking.t and deal with the
	blocking sockets properly.
	* New Release IO-Socket-INET6-2.57

2008-10-06 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a modified version of a patch by Anicka Bernathova
	<anicka@suse.cz>:
	{{{
	Previously IO-Socket-INET6 tried to bind even when one side
	is AF_INET and the other AF_INET6 and this cannot work.

	The FAMILY_CHECK loop is meant to make sure both sides have
	the same family.
	}}}
	* New Release IO-Socket-INET6-2.56
